--- a/index.html
+++ b/index.html
@@ -68,6 +68,22 @@
               </div>
             </div>
             <div class="form-group">
+              <label for="sweetness">Sweetness (0-12)</label>
+              <div class="rating-group">
+                <span>0</span>
+                <input
+                  type="range"
+                  id="sweetness"
+                  min="0"
+                  max="12"
+                  step="1"
+                  value="6"
+                />
+                <span id="sweetness-value">6</span>
+                <span>12</span>
+              </div>
+            </div>
+            <div class="form-group">
               <label for="user-comment">Comments</label>
               <textarea
                 id="user-comment"
@@ -94,6 +110,9 @@
                   </th>
                   <th class="sortable" data-sort="rating">
                     Rating <span class="sort-icon"></span>
+                  </th>
+                  <th class="sortable" data-sort="sweetness">
+                    Sweetness <span class="sort-icon"></span>
                   </th>
                   <th>Comment</th>
                   <th>Action</th>
