--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                   value="2.5"
                 />
                 <span id="rating-value">2.5</span>
+                <span>/</span>
                 <span>5</span>
               </div>
             </div>
@@ -80,6 +81,7 @@
                   value="6"
                 />
                 <span id="sweetness-value">6</span>
+                <span>/</span>
                 <span>12</span>
               </div>
             </div>
