Refactor app.js to use Supabase for data management and update index.html to load it as a module; add server.js for future backend functionality

--- a/index.html
+++ b/index.html
@@ -148,6 +148,6 @@
       type="text/javascript"
       src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"
     ></script>
-    <script src="./js/app.js"></script>
+    <script type="module" src="./js/app.js"></script>
   </body>
 </html>
