--- a/index.html
+++ b/index.html
@@ -11,15 +11,10 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
+    <!-- Grid.js CSS -->
     <link
+      href="https://unpkg.com/gridjs/dist/theme/mermaid.min.css"
       rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="https://cdn.datatables.net/responsive/2.2.9/css/responsive.dataTables.min.css"
     />
   </head>
   <body>
@@ -151,28 +146,7 @@
             </button>
           </div>
           <div class="table-wrapper">
-            <table
-              id="wine-table"
-              class="display responsive nowrap"
-              width="100%"
-            >
-              <thead>
-                <tr>
-                  <th>Wine Name</th>
-                  <th>ABV %</th>
-                  <th>Grape</th>
-                  <th>Rating</th>
-                  <th>Sweetness</th>
-                  <th>Rated by Kay</th>
-                  <th>Rated by Rebecka</th>
-                  <th>Comment</th>
-                  <th>Action</th>
-                </tr>
-              </thead>
-              <tbody id="wine-list">
-                <!-- Wine entries will be dynamically inserted here -->
-              </tbody>
-            </table>
+            <div id="wine-table"></div>
           </div>
         </section>
       </main>
@@ -182,15 +156,8 @@
       <p>2025 | Vinothèque | Cheers to good wine! 🍇</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script
-      type="text/javascript"
-      charset="utf8"
-      src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.js"
-    ></script>
-    <script
-      type="text/javascript"
-      src="https://cdn.datatables.net/responsive/2.2.9/js/dataTables.responsive.min.js"
-    ></script>
+    <!-- Grid.js JS -->
+    <script src="https://unpkg.com/gridjs/dist/gridjs.umd.js"></script>
     <script type="module" src="./js/app.js"></script>
   </body>
 </html>
